# revelation

./: .gitignore  .isort.cfg  .travis.yml  LICENSE  README.md  makefile  pyproject.toml  requirements.txt  requirements_dev.txt  revelation.py  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pythonpackage.yml  test-suite.yml
example_slides/: config.py  slides.md
revelation/: __init__.py  app.py  cli.py  cli_types.py  config.py  constants.py  default_config.py  utils.py
revelation/templates/: presentation.html
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_utils.py
