[tool.poetry]
name = "revelation"
version = "2.0.1"
description = "Make awesome reveal.js presentations with revelation"
authors = ["Humberto Rocha <humrochagf@gmail.com>"]
license = "MIT"
readme = "README.md"
exclude = ["revelation/static/*"]
classifiers = [
  "Environment :: Console",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[tool.poetry.scripts]
revelation = "revelation.cli:cli"
rv = "revelation.cli:cli"

[tool.poetry.dependencies]
python = "^3.8.1"
Werkzeug = {extras = ["watchdog"], version = "^2.2.2"}
Jinja2 = "^3.1.2"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = {extras = ["colors"], version = "^5.11.4"}
flake8 = "^6.0.0"
coveralls = "^3.3.1"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
types-Jinja2 = "^2.11.9"
types-Werkzeug = "^1.0.9"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "revelation"
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
