[tool.poetry]
name = "revelation"
version = "2.1.0"
description = "Make awesome reveal.js presentations with revelation"
authors = ["Humberto Rocha <humrochagf@gmail.com>"]
license = "MIT"
readme = "README.md"
exclude = ["revelation/static/*"]
classifiers = [
  "Environment :: Console",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[tool.poetry.scripts]
revelation = "revelation.cli:cli"
rv = "revelation.cli:cli"

[tool.poetry.dependencies]
python = "^3.8.1"
Werkzeug = {extras = ["watchdog"], version = "^2.2.2"}
Jinja2 = "^3.1.2"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
coveralls = "^3.3.1"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
types-Jinja2 = "^2.11.9"
types-Werkzeug = "^1.0.9"
ruff = "^0.0.236"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
src = ["revelation", "tests"]

[tool.ruff.isort]
known-first-party = ["revelation"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
